<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_login_first"
            android:textColor="@color/text_color_white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/login"
                android:textColor="@color/text_color_white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/text_later"
                android:textColor="@color/text_color_white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>