<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorLogin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rl_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/icon_wisata" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />


            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/et_password__"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/ic_mail_black_24dp">

                <AutoCompleteTextView
                    android:id="@+id/et_identifier"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:textColorHint="#666" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.github.florent37.materialtextfield.MaterialTextField
                    android:id="@+id/et_password_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_image="@drawable/ic_https_black_24dp">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#333"
                        android:textColorHint="#666" />

                </com.github.florent37.materialtextfield.MaterialTextField>
                <!-- <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:gravity="center"
                    android:background="@drawable/edittext_bottom_bg"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />-->

                <CheckBox
                    android:id="@+id/cbShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/et_password_"
                    android:layout_alignBottom="@+id/et_password_"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/checkbox_showpassword"
                    android:textColor="@color/text_color_white"
                    android:visibility="visible" />


            </RelativeLayout>


            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner_login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_language"
                style="@style/TextCommon.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/text_indonesia"
                android:textColor="@color/text_color_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/text_color_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_or"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/text_color_white" />

            </LinearLayout>


            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_facebook"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="12dp"
                android:visibility="gone"
                facebook:com_facebook_login_text="@string/text_login_facebook" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/text_need_account"
                android:textColor="@android:color/white"
                android:textSize="15dp" />


            <Button
                android:id="@+id/btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/rounded_corner_register"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="17dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
