<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:scrollbars="none">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_below="@+id/iv_avatar"
                        android:layout_marginRight="12dp"
                        android:layout_centerInParent="true"
                        android:focusable="true"
                         android:focusableInTouchMode="true"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:src="@drawable/edit_text_tengah_bg_2"
                        android:padding="30dp"
                        android:id="@+id/linearLayout">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:background="@drawable/edittext_top_bg"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            android:textColorHint="#aaa"
                            android:textColor="@color/colorBlack"
                            style="@style/EditText"
                            android:hint="@string/text_fullname"/>

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:textColorHint="#aaa"
                            android:textColor="@color/colorBlack"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/edittext_tengah_bg"
                            android:hint="@string/email" />

                        <EditText
                            android:id="@+id/et_gender"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:textColorHint="#aaa"
                            android:textColor="@color/colorBlack"
                            android:background="@drawable/edittext_tengah_bg"
                            android:hint="@string/text_gender"/>

                        <EditText
                            android:id="@+id/et_birthDate"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:textColorHint="#aaa"
                            android:textColor="@color/colorBlack"
                            android:background="@drawable/edittext_tengah_bg"
                            android:hint="@string/text_birthdate"/>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">



                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:paddingLeft="10dp"
                                style="@style/EditText"
                                android:textColorHint="#aaa"
                                android:textColor="@color/colorBlack"
                                android:inputType="textPassword"
                                android:background="@drawable/edittext_bottom_bg"
                                android:hint="@string/password"/>

                            <CheckBox
                                android:id="@+id/cbShowPassword"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/et_password"
                                android:layout_alignBottom="@+id/et_password"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="5dp"
                                android:layout_marginBottom="10dp"
                                android:button="@drawable/checkbox_showpassword"
                                android:textColor="@color/text_color_white"
                                android:visibility="visible" />
                            </RelativeLayout>



                        <Button
                            android:id="@+id/btn_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            android:text="@string/register"
                            android:textColor="@color/colorWhite"
                            android:background="@drawable/rounded_corner_register" />


                    </LinearLayout>

                    <asywalul.minang.wisatasumbar.widget.Rounded
                        android:id="@+id/iv_avatar"
                        android:visibility="gone"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:foregroundGravity="center|bottom"
                        android:src="@drawable/ic_profile_blank"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <ImageView
                        android:id="@+id/iv_take_image"
                        android:layout_width="40dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_take_image"
                        android:layout_height="40dp"
                        android:layout_marginLeft="56dp"
                        android:layout_marginStart="56dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignLeft="@+id/iv_avatar"
                        android:layout_alignStart="@+id/iv_avatar"
                        android:layout_marginTop="51dp" />
                </RelativeLayout>

    </ScrollView>
</RelativeLayout>